--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
     <section class="gallery" id="about">
         <h1 class="section__title">Gallery</h1>
         <div class="gallery__video">
-            <video class="gallery__video-content" controls autoplay>
+            <video class="gallery__video-content" controls autoplay loop>
                 <source src="videos/vid1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <video class="gallery__video-content" controls autoplay>
+            <video class="gallery__video-content" controls autoplay loop>
                 <source src="videos/vid2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
