changed explore button's class

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="tab__content" id="delivery">
                     <p>Our delivery process is crafted to ensure your orders arrive promptly and in pristine condition. Once your order is received through our online platform or via phone call, our dedicated team swings into action. For deliveries within the valley, we offer a flat rate of Rs 100.</p>
                 </div>
-                <div class="info-section__menu-btn">
+                <div class="menuBtn">
                     <a href="#menu">Explore</a>
                 </div>
             </div>
